Better fix for the overflow issue.

--- a/assets/css/pco_style.css
+++ b/assets/css/pco_style.css
@@ -18,6 +18,3 @@
     max-width: 600px; /* Could be more or less, depending on screen size */
     text-align: center;
 }
-.pco-wrapper {
-    overflow: hidden;
-}
